test/libsolidity/syntaxTests/constructor/returns_in_constructor.sol
contract test {
	constructor() returns (uint a) { }
}
// ----
// TypeError 9712: (39-47): Non-empty "returns" directive for constructor.
